# rust-ssz-demo

./: Cargo.toml
src/: main.rs
